force-app/main/default/objects/Preset__c/Preset__c.object-meta.xml
<CustomObject>
    <label>Preset</label>
    <nameField>
        <displayFormat>Preset{0}</displayFormat>
        <label>Preset Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Presets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>