force-app/main/default/objects/Preset__c/fields/Armor_Chest__c.field-meta.xml
<CustomField>
    <fullName>Armor_Chest__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Armor Chest</label>
    <referenceTo>Armor__c</referenceTo>
    <relationshipLabel>Presets (Armor Chest)</relationshipLabel>
    <relationshipName>Armor_Chest_Preset</relationshipName>
    <type>Lookup</type>
</CustomField>