force-app/main/default/objects/Preset__c/fields/Belt__c.field-meta.xml
<CustomField>
    <fullName>Belt__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Belt</label>
    <referenceTo>Armor__c</referenceTo>
    <relationshipLabel>Presets (Belt)</relationshipLabel>
    <relationshipName>Belt_Preset</relationshipName>
    <type>Lookup</type>
</CustomField>