force-app/main/default/objects/Preset__c/fields/Boots__c.field-meta.xml
<CustomField>
    <fullName>Boots__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Boots</label>
    <referenceTo>Armor__c</referenceTo>
    <relationshipLabel>Presets (Boots)</relationshipLabel>
    <relationshipName>Boots_Preset</relationshipName>
    <type>Lookup</type>
</CustomField>