force-app/main/default/objects/Preset__c/fields/Gloves__c.field-meta.xml
<CustomField>
    <fullName>Gloves__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Gloves</label>
    <referenceTo>Armor__c</referenceTo>
    <relationshipLabel>Presets</relationshipLabel>
    <relationshipName>Gloves_Preset</relationshipName>
    <type>Lookup</type>
</CustomField>