force-app/main/default/objects/Preset__c/fields/Helmet__c.field-meta.xml
<CustomField>
    <fullName>Helmet__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Helmet</label>
    <referenceTo>Armor__c</referenceTo>
    <relationshipLabel>Presets (Helmet)</relationshipLabel>
    <relationshipName>Helmet_Preset</relationshipName>
    <type>Lookup</type>
</CustomField>