force-app/main/default/objects/Preset__c/fields/Necklace__c.field-meta.xml
<CustomField>
    <fullName>Necklace__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Necklace</label>
    <referenceTo>Jewellery__c</referenceTo>
    <relationshipLabel>Presets</relationshipLabel>
    <relationshipName>Necklace_Preset</relationshipName>
    <type>Lookup</type>
</CustomField>