force-app/main/default/objects/Preset__c/fields/Ring1__c.field-meta.xml
<CustomField>
    <fullName>Ring1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ring1</label>
    <referenceTo>Jewellery__c</referenceTo>
    <relationshipLabel>Presets (Ring1)</relationshipLabel>
    <relationshipName>Ring1_Preset</relationshipName>
    <type>Lookup</type>
</CustomField>