force-app/main/default/objects/Preset__c/fields/Ring2__c.field-meta.xml
<CustomField>
    <fullName>Ring2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ring2</label>
    <referenceTo>Jewellery__c</referenceTo>
    <relationshipLabel>Presets (Ring2)</relationshipLabel>
    <relationshipName>Ring2_Preset</relationshipName>
    <type>Lookup</type>
</CustomField>