force-app/main/default/objects/Preset__c/fields/Trousers__c.field-meta.xml
<CustomField>
    <fullName>Trousers__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Trousers</label>
    <referenceTo>Armor__c</referenceTo>
    <relationshipLabel>Presets (Trousers)</relationshipLabel>
    <relationshipName>Presets</relationshipName>
    <type>Lookup</type>
</CustomField>