force-app/main/default/objects/Preset__c/fields/Weapon1__c.field-meta.xml
<CustomField>
    <fullName>Weapon1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Weapon1</label>
    <referenceTo>Weapon__c</referenceTo>
    <relationshipLabel>Presets (Weapon1)</relationshipLabel>
    <relationshipName>Weapon1_Preset</relationshipName>
    <type>Lookup</type>
</CustomField>