force-app/main/default/objects/Preset__c/fields/Weapon2__c.field-meta.xml
<CustomField>
    <fullName>Weapon2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Weapon2</label>
    <referenceTo>Weapon__c</referenceTo>
    <relationshipLabel>Presets (Weapon2)</relationshipLabel>
    <relationshipName>Weapon2_Preset</relationshipName>
    <type>Lookup</type>
</CustomField>