force-app/main/default/objects/Preset__c/validationRules/ArmorVRule.validationRule-meta.xml
<ValidationRule>
    <fullName>ArmorVRule</fullName>
    <active>true</active>
    <errorConditionFormula>!ISPICKVAL(Armor_Chest__r.Type__c, &apos;Chest Armor&apos;) &amp;&amp;  Armor_Chest__c!=&apos;&apos;</errorConditionFormula>
    <errorDisplayField>Armor_Chest__c</errorDisplayField>
    <errorMessage>Chest Armor is required</errorMessage>
</ValidationRule>