force-app/main/default/objects/Preset__c/validationRules/BootsVRule.validationRule-meta.xml
<ValidationRule>
    <fullName>BootsVRule</fullName>
    <active>true</active>
    <errorConditionFormula>!ISPICKVAL( Boots__r.Type__c , &apos;Boots&apos;) &amp;&amp;  Boots__c!=&apos;&apos;</errorConditionFormula>
    <errorDisplayField>Boots__c</errorDisplayField>
    <errorMessage>Boots are required</errorMessage>
</ValidationRule>