force-app/main/default/objects/Preset__c/validationRules/GlovesVRule.validationRule-meta.xml
<ValidationRule>
    <fullName>GlovesVRule</fullName>
    <active>true</active>
    <errorConditionFormula>!ISPICKVAL(Gloves__r.Type__c, &apos;Gloves&apos;) &amp;&amp; Gloves__c != &apos;&apos;</errorConditionFormula>
    <errorDisplayField>Gloves__c</errorDisplayField>
    <errorMessage>Gloves are required</errorMessage>
</ValidationRule>