force-app/main/default/objects/Preset__c/validationRules/HelmetVRule.validationRule-meta.xml
<ValidationRule>
    <fullName>HelmetVRule</fullName>
    <active>true</active>
    <errorConditionFormula>!ISPICKVAL( Helmet__r.Type__c , &apos;Helmet&apos;) &amp;&amp; Helmet__c != &apos;&apos;</errorConditionFormula>
    <errorMessage>Helmet is required</errorMessage>
</ValidationRule>