force-app/main/default/objects/Preset__c/validationRules/TrousersVRule.validationRule-meta.xml
<ValidationRule>
    <fullName>TrousersVRule</fullName>
    <active>true</active>
    <errorConditionFormula>!ISPICKVAL( Trousers__r.Type__c , &apos;Trousers&apos;) &amp;&amp; Trousers__c != &apos;&apos;</errorConditionFormula>
    <errorDisplayField>Trousers__c</errorDisplayField>
    <errorMessage>Trousers is required</errorMessage>
</ValidationRule>