force-app/main/default/objects/Preset__c/validationRules/TwoHandedWeaponVRule.validationRule-meta.xml
<ValidationRule>
    <fullName>TwoHandedWeaponVRule</fullName>
    <active>true</active>
    <errorConditionFormula>(ISPICKVAL(Weapon1__r.Type__c, &apos;Two-Handed&apos;) &amp;&amp; Weapon2__c !=&apos;&apos;)
|| (ISPICKVAL(Weapon2__r.Type__c, &apos;Two-Handed&apos;) &amp;&amp; Weapon1__c !=&apos;&apos;)</errorConditionFormula>
    <errorMessage>Only one Two-Handed Weapon</errorMessage>
</ValidationRule>